# lenskit-auto

./: .coverage  .readthedocs.yaml  MANIFEST.in  README.md  environment.yml  example.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run_preprocessing.py  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: tests.yml
data_generator/: generate_default_config_data.py  generate_optimized_config_data.py
docs/: Demo.ipynb  Experiments.md  Getting_Started.md  README.md  RecSys-Demo.ipynb  RecSys23-Demo.ipynb  SIGIR23-Demo.ipynb  conf.py  docs_requirements.txt  index.rst  lkauto.algorithms.rst  lkauto.ensemble.rst  lkauto.explicit.rst  lkauto.implicit.rst  lkauto.optimization_strategies.rst  lkauto.preprocessing.rst  lkauto.rst  lkauto.utils.rst  modules.rst  requirements.txt  tests.algorithms.rst  tests.rst  tests.utils.rst
lkauto/: __init__.py  lkauto.py
lkauto/algorithms/: als.py  bias.py  funksvd.py  item_knn.py  svd.py  user_knn.py
lkauto/ensemble/: ensemble_builder.py  greedy_ensemble_selection.py
lkauto/ensembles/: ensemble_selection.py
lkauto/explicit/: explicit_default_config_space.py  explicit_evaler.py
lkauto/implicit/: implicit_default_config_space.py  implicit_evaler.py
lkauto/optimization_strategies/: bayesian_optimization.py  random_search.py  tree_parzen_estimator.py
lkauto/preprocessing/: preprocessing.py  pruning.py
lkauto/utils/: filer.py  get_default_configuration_space.py  get_default_configurations.py  get_model_from_cs.py  logging.py  logging_utils.py  pred_and_rec_functions.py  update_top_n_runs.py  validation_split.py  visualizer.py
optimizer/: SMAC.py  missing_config_parameters.py
preprocessing/: README.md  data_handler.py  data_preprocessors.py
preprocessing/utils/: amazon_dataset_utils.py  catheat.py  netflix_dataset_utils.py  yelp_dataset_utils.py
tests/: README.md  test_lkauto.py
tests/algorithms/: test_als.py  test_bias.py  test_funk_svd.py  test_item_knn.py  test_svd.py  test_user_knn.py
tests/ensemble/: test_ensemble_builder.py  test_greedy_ensemble_selection.py
tests/explicit/: test_explicit.py
tests/implicit/: test_implicit.py
tests/lkauto/algorithms/: test_als.py  test_bias.py  test_funk_svd.py  test_item_knn.py  test_svd.py  test_user_knn.py
tests/lkauto/utils/: test_get_default_configuration_space.py  test_validation_split.py
tests/optimization_strategies/: test_bayesian_optimization.py  test_random_search.py
tests/preprocessing/: test_preprocessing.py  test_pruning.py
tests/utils/: test_filer.py  test_get_default_configuration_space.py  test_get_default_configurations.py  test_get_model_from_cs.py  test_pred_and_rec_functions.py  test_update_top_n_runs.py  test_validation_split.py  test_visualization_figures.py
tests/utils/visualization_test_dir/test_data/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
